* making a scrollable report table with sticky header * adjusting report styles and alignments * fixed adjustScrollableContent() for mobile

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -122,7 +122,7 @@ label {
 .scrollableContent {
     width: 100%;
     overflow-y: scroll;
-    scrollbar-color: rgba(192, 192, 192, .5) transparent;
+    scrollbar-color: rgba(192, 192, 192, .5) rgba(0, 0, 0, .1);
 }
 
 .ulNotes {
@@ -377,14 +377,25 @@ label {
     border-left: 1px solid #CCCCCC;
     border-right: none;
     border-top: none;
+    width: 100%;
+    display: block;
+    overflow-x: hidden;
+    overflow-y: auto;
+    scrollbar-color: rgba(192, 192, 192, .5) rgba(0, 0, 0, .1);
 }
 
 .theadReport {
+    position: sticky;
+    top: 0;
+    z-index: 101;
     font-family: Helvetica, Arial, sans-serif;
     line-height: 16px;
 }
 
 .thReport {
+    position: sticky;
+    top: 0;
+    z-index: 101;
     padding-left: 10px;
     border-left: none;
     border-top: 1px solid #CCCCCC;
@@ -394,8 +405,8 @@ label {
 }
 
 .thReportNr {
-    padding-left: 35px;
-    width: 30px;
+    padding-left: 40px;
+    padding-right: 15px;
 }
 
 .thReportStatus {
@@ -430,6 +441,7 @@ label {
 .tdReportInfo {
     border-left:none;
     padding-left: 0;
+    width: 100%;
 }
 
 .tdReportStatus {
